add hiring analytics lakehouse batch
- add privacy-aware operational event transforms and analytics batch processing
- add analytics build and test configuration with snapshot document coverage
- wire analytics services and Mongo snapshot support into the local Compose setup
- document the hiring analytics lakehouse design and usage